--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
 
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-6617466316240896",
+        enable_page_level_ads: true
+      });
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=980, user-scalable=yes">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
